# q_code

./: .coverage  .pre-commit-config.yaml  coverage.xml  pyproject.toml
src/q_code_game/: models.py  settings.py
tests/: test_models.py
